# gpipe-example

./: LICENSE  Main.hs  README.md  gpipe-example.cabal  package.yaml  stack.yaml
app/: Main.hs
