name: gpipe-example
version: 0.1.0.0
build-type: Simple
cabal-version: 1.10
license: MIT
license-file: LICENSE

executable gpipe-example-exe
  main-is: Main.hs
  hs-source-dirs: ./.
  build-depends:
    base >=4.12,
    GPipe >=2,
    GPipe-GLFW,
    random,
    linear,
    transformers,
    exception-transformers,
    lens
  ghc-options: -Wno-tabs
  default-language: Haskell2010
